Break out solver and tokenizer

--- a/notebooks/scrap.ipynb
+++ b/notebooks/scrap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'crypto' from '/Users/chris/Documents/cryptogram-solver/src/crypto.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,6 +21,7 @@
     "from importlib import reload\n",
     "from pathlib import Path\n",
     "import sys\n",
+    "from string import ascii_lowercase as LETTERS\n",
     "\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "\n",
@@ -30,17 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LETTERS = ascii_lowercase\n",
-    "LETTERS_SET = set(LETTERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:08<00:00, 58.37it/s]\n"
+      "100%|██████████| 500/500 [00:08<00:00, 58.49it/s]\n"
      ]
     },
     {
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +79,7 @@
        "'from: ez027993@dale.ucdavis.edu (gary built like villanueva huckabay)\\nsubject: ron gant, stalling, and hirschbeck.\\norganization: julio machado candlelight vigil society\\nlines: 88\\n\\n(dale \"seer\" stephenson) writes:\\n>while i can see why they want to cut down on the time spent walking around,\\n>gant wasn\\'t ordered back in the box \"sooner\", he was ordered back immediately.\\n>as soon as he stepped out, hirschbeck told him to get back in the box.\\n>now, gant doesn\\'t take a lot of walks between pitches.  the only reason\\n>he did then because he was *very* bothered by the call.  i expect his\\n>concentration wasn\\'t there yet, and in a crucial situation i imagine it\\'s\\n>best to be as calm as possible.  contributing factors would be gant\\'s\\n>bad day at the plate, bad year at the plate, and the braves long scoring\\n>drought.\\n\\nand it is not hirschbeck\\'s job to help gant with any of these difficulties.\\nif gant can\\'t gather his concentration for whatever reason, that just makes\\nhim all the more meat in the batter\\'s box.  the umpire\\'s job is to \\nmaintain flow of play.  gant is not entitled to time to regather his\\nfaculties.\\n\\nnor is anyone else.\\n\\n>now, it\\'s pretty stupid to go ahead and talk the walk when the umpire is\\n>telling you to get in there.  you know the umpire is going to do something\\n>(call for a strike, throw you out, etc.).  gant was wrong.\\n\\nabsolutely.  i think it\\'d be more accurate to say gant was foolish.\\n\\n>but hirschbeck was more wrong, in my biased view.  aside from the major chip\\n>he seemed to have on his shoulder, what was the problem.  gant had a reason\\n>to want some time (disputed strike call).  \\n\\nif a disputed strike call is ample reason for a timeout, games would last\\nabout nine-fifteen weeks, if jack morris or dave \"whiner\" stieb were\\npitching.  a disputed strike call is not sufficient for a time out.\\nsuck it up, get back in the box, and never badmouth the blue.  they\\'re\\nnot going to change their mind, and you\\'re just going to come across\\nas a pinhead, which won\\'t help you with the borderline calls.\\n\\nftr - i never speak to umpires when i don\\'t know them personally, nor\\ndo i glance at them, or react to calls.  as a result, i think i get more\\nthan my fair share of borderline calls at the plate, because i have a\\nrep of having a good eye.  (actually, there are a lot of negative\\nconnotations that go with that rep, including copious questions about\\nmy masculinity, party affiliation, and sexual preference.)\\n\\n>gant hadn\\'t been wasting time all\\n>game.  the game had been cruising along, and was just over two hours old.\\n\\nirrelevant.  he was wasting time then.\\n\\n>the score was 1-0, with 2 outs in the ninth and a runner in scoring position.\\n>is there *any* reason hirschbeck couldn\\'t, and shouldn\\'t, cut gant a little\\n>slack?  \\n\\n1.  because it\\'s not his job.\\n\\n2.  because setting the precedent of cutting slack there can easily \\n    extend to those 3 hour games.  (kind of like the phantom dp.)\\n\\n>for no discernible constructive reason, hirschbeck disrupted the\\n>game, caused a five minute delay, and materially hurt the batter in a key\\n>situation.  did he have a date to get to?\\n\\ngant hurt himself, and the braves disrupted the game.  your biases are\\nexposed, and i\\'m sitting here defending umpires and the sf giants,\\nwhich is like phyllis schlafly defending gary segura, jack kevorkian,\\nand the swedish abortion team.  \\n\\n>and i still wonder why terry was tossed earlier in the game.\\n\\ni believe terry said the magic word.  there are some truly quick ways\\nto get tossed from a ballgame.  for a primer, email me.\\n\\ngood ways to get tossed from a game:\\n\\n1.  ask ken kaiser if he got his money back from nutri-system.\\n2.  kiss rich garcia on the lips, and say \"hi, honey, i\\'m home!\"\\n3.  goose eric gregg.\\n4.  ask bruce froemming if his parents had any children that lived.\\n5.  get naked.\\n\\n(source: the greg spira book of diamond ettiquette, as told to\\n peter gammons.  1991, collier press.)\\n\\n\\n-- \\n*   gary huckabay   * \"outside?!  that was right down the bleedin\\' pipe, *\\n* \"balder than any  *  kenny!  i realize i don\\'t have great control, but *\\n*  dave on the net. *  c\\'mon!\"  \"gary, that was a styrofoam cup.  the    *\\n*      really.\"     *  plate\\'s a foot to your right.  throw the ball.\"   *\\n'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,58 +93,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import sample"
+    "from random import sample\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Mapping:\n",
-    "    def __init__(self, letters=None):\n",
-    "        if letters is None:\n",
-    "            self.letters = LETTERS  # initialize as a -> a, b -> b, etc.\n",
-    "    \n",
-    "    def scramble(self, inplace=False):\n",
-    "        shuffle(self.letters)\n",
-    "    \n",
-    "    def swap(self, l1, l2, inplace=False):\n",
-    "        letters = self.letters\\\n",
-    "            .replace(l1, tmp)\\\n",
-    "            .replace(l2, l1)\\\n",
-    "            .replace(tmp, l2)\n",
-    "        if inplace:\n",
-    "            self.letters = letters\n",
-    "        else:\n",
-    "            return self\n",
+    "class Solver:\n",
+    "    def __init__(self, tokenizer, doc):\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.doc = doc\n",
     "\n",
-    "    def translate(self, text):\n",
-    "        trans = ''.maketrans(self.letters, LETTERS)\n",
-    "        return text.translate(trans)"
+    "    def calc_nll(self, text):\n",
+    "        \"\"\"Caluclate mean negative log likelihood.\"\"\"\n",
+    "        tokens = self.tokenizer.tokenize(text)\n",
+    "        nll = 0\n",
+    "        for token, count in tokens.items():\n",
+    "            try:\n",
+    "                vocab_count = self.tokenizer.vocab[token]\n",
+    "            except KeyError:\n",
+    "                vocab_count = self.tokenizer.pseudo_count\n",
+    "            total = self.tokenizer.totals[(token.kind, token.n)]  # could break\n",
+    "            prob = vocab_count / total\n",
+    "            nll += -1 * log(prob) * count\n",
+    "        return nll / len(tokens)  # take mean\n",
+    "    \n",
+    "    def softmax(x, temp=1):\n",
+    "        return np.exp(x / temp) / np.sum(np.exp(x / temp), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  4.37804039e-05,   1.22723586e-03,   3.44014153e-02,\n",
+       "         9.64327568e-01])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solver.softmax(np.array([2, 3, 4, 5]), 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Doc:\n",
-    "    def __init__(self, text):\n",
-    "        self.text = text.lower()\n",
-    "        \n",
-    "    def get_letters(self):\n",
-    "        return list(set(self.text) & set(LETTERS))\n",
-    "\n",
-    "    # def translate(self, mapping):\n",
-    "    #     trans = ''.maketrans(mapping.letters, LETTERS)\n",
-    "    #     return self.text.translate(trans)"
+    "from scipy.optimize import basinhopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basinhopping()"
    ]
   },
   {
